crates/provider-gmail/src/snapshots/mxr_provider_gmail__parse__tests__gmail_fixture__rfc2231-attachment.snap
---
source: crates/provider-gmail/src/parse.rs
expression: "json!({\n    \"subject\": envelope.subject, \"from\": envelope.from, \"to\": envelope.to,\n    \"cc\": envelope.cc, \"message_id\": envelope.message_id_header,\n    \"in_reply_to\": envelope.in_reply_to, \"references\": envelope.references,\n    \"unsubscribe\": format!(\"{:?}\", envelope.unsubscribe), \"list_id\":\n    body.metadata.list_id, \"auth_results\": body.metadata.auth_results,\n    \"content_language\": body.metadata.content_language, \"text_plain_format\":\n    format!(\"{:?}\", body.metadata.text_plain_format), \"plain_excerpt\":\n    body.text_plain.as_deref().map(|text|\n    text.lines().take(2).collect::<Vec<_>>().join(\"\\n\")),\n})"
---
auth_results: []
cc: []
content_language: []
from:
  email: files@example.com
  name: Files
in_reply_to: ~
list_id: ~
message_id: "<rfc2231@example.com>"
plain_excerpt: Attachment filename uses RFC2231 encoding.
references: []
subject: RFC2231 attachment
text_plain_format: Some(Fixed)
to:
  - email: bob@example.com
    name: Bob
unsubscribe: None
